# rlm

./: .gitignore  APPLICATION_LIMITING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install-desktop.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs  limit.rs  util.rs
docs/superpowers/specs/: 2026-05-30-freeze-guard-design.md  2026-05-31-process-grouping-and-persistent-rules-design.md
gtk-gui/: Cargo.toml
gtk-gui/assets/: io.github.rlm.gtk.desktop
gtk-gui/src/: main.rs  window.rs
gtk-gui/src/pages/: about.rs  limit.rs  mod.rs  profiles.rs  run.rs  status.rs
gtk-gui/src/widgets/: mod.rs
guard/: Cargo.toml
guard/src/: main.rs
rlm-core/: Cargo.toml
rlm-core/src/: cgroup.rs  desktop.rs  lib.rs  process.rs  rules.rs  status.rs
rlm-core/src/guard/: effector.rs  mod.rs  policy.rs  sampler.rs  types.rs
