[workspace]
resolver = "2"
members = ["cli", "rlm-core", "common", "gtk-gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jayashankarvr/rlm"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
dirs = "6.0"

common = { path = "common" }
rlm-core = { path = "rlm-core" }
