[package]
name = "rlm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resource Limit Manager - control process resource usage via cgroups v2"
readme = "../README.md"
keywords = ["cgroups", "resource-limit", "memory", "cpu", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]

[package.metadata.deb]
maintainer = "Jayashankar <me.jayashankar@gmail.com>"
section = "admin"
priority = "optional"
depends = "$auto, systemd"
assets = [
    ["target/release/rlm", "usr/bin/", "755"],
    ["target/release/rlm-guard", "usr/bin/", "755"],
    ["../dist/rlm-guard.service", "usr/lib/systemd/user/", "644"],
    ["../README.md", "usr/share/doc/rlm/", "644"],
    ["../dist/delegate.conf", "etc/systemd/system/user@.service.d/", "644"],
]
maintainer-scripts = "../dist"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rlm", dest = "/usr/bin/rlm", mode = "755" },
    { source = "target/release/rlm-guard", dest = "/usr/bin/rlm-guard", mode = "755" },
    { source = "../dist/rlm-guard.service", dest = "/usr/lib/systemd/user/rlm-guard.service", mode = "644" },
    { source = "../README.md", dest = "/usr/share/doc/rlm/README.md", mode = "644" },
    { source = "../dist/delegate.conf", dest = "/etc/systemd/system/user@.service.d/rlm-delegate.conf", mode = "644" },
]
post_install_script = "../dist/postinst"

[[bin]]
name = "rlm"
path = "src/main.rs"

[dependencies]
common.workspace = true
rlm-core.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
dirs.workspace = true
libc = "0.2.178"
serde_yaml_ng = "0.10"
