[package]
name = "rlm-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GTK4/Libadwaita GUI for Resource Limit Manager"

[[bin]]
name = "rlm-gtk"
path = "src/main.rs"

[dependencies]
common.workspace = true
rlm-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

gtk = { package = "gtk4", version = "0.9.6" }
adw = { package = "libadwaita", version = "0.7.1", features = ["v1_4"] }
open = "5"
